# pos-system

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: continuous_integration.yaml
pos-supermarket/: config.hpp  main.cpp  products.hpp
pos-supermarket/database/: invoices.db  products.db
pos-supermarket/database/databases_manager/: databases_manager.cpp  databases_manager.hpp
pos-supermarket/database/products/: products_database.cpp  products_database.hpp
pos-supermarket/invoice/: invoice.cpp  invoice.hpp
pos-supermarket/invoice/invoice_database/: invoice_database.cpp  invoice_database.hpp
pos-supermarket/products/: products.hpp
pos-supermarket/products/products_database/: products_database.hpp
pos-supermarket/state_machine/: pos_context.cpp  pos_context.hpp  pos_state.hpp
pos-supermarket/state_machine/context/: context.hpp  pos_context.cpp  pos_context.hpp
pos-supermarket/state_machine/error_state/: error_state.cpp  error_state.hpp
pos-supermarket/state_machine/idle_state/: idle_state.cpp  idle_state.hpp
pos-supermarket/state_machine/items_state/: items_state.cpp  items_state.hpp
pos-supermarket/state_machine/ready_state/: ready_state.cpp  ready_state.hpp
pos-supermarket/state_machine/states/: pos_base_state.hpp  pos_state.hpp
src/: main.cpp
src/database/: invoices.db  products.db
src/invoice/: invoice.cpp
tests/: CMakeLists.txt  sample_test.cpp  sample_test_copy.cpp
tests/cmake/: FindGMock.cmake
tests/database/products/: products_database_test.cpp  products_database_test.hpp
tests/mocks/: mock_context.hpp  mock_databases_manager.hpp  mock_transaction_data.hpp
tests/state-machine/: mock_state.hpp  pos_context_test.cpp  pos_context_test.hpp
tests/state-machine/idle_state_test/: idle_state_test.cpp  idle_state_test.hpp
tests/state-machine/items_state_test/: items_state_test.cpp  items_state_test.hpp
tests/state-machine/mocks/: mock_context.hpp  mock_state.hpp  mock_transaction_data.hpp
tests/state-machine/payment/partial_payment_state_test/: partial_payment_state_test.cpp  partial_payment_state_test.hpp
tests/state-machine/payment/payment_completion_state_test/: payment_completion_state_test.cpp  payment_completion_state_test.hpp
tests/state-machine/payment/payment_selection_state_test/: payment_selection_state_test.cpp  payment_selection_state_test.hpp
tests/state-machine/pos_context_test/: pos_context_test.cpp  pos_context_test.hpp
tests/state-machine/ready_state_test/: ready_state_test.cpp  ready_state_test.hpp
tests/stubs/: stub_pos_context.hpp
(+33 files in other folders)
